[Fix][Engine]Fix invalidate_items view drop error